# microservice-example

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/controller/: add_new_user.rs  mod.rs  user.rs
src/controller/utils/: mod.rs
src/database/: add_new_user.rs  get_user_password.rs  mod.rs  user.rs
src/model/: mod.rs
src/server/: add_new_user.rs  json_response.rs  mod.rs  user_router.rs
src/server/utils/: mod.rs
src/utils/: mod.rs
