[package]
name = "for_testing"
version = "0.1.0"
authors = ["lighty"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
futures = "0.3.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
mongodb = "0.9.2"
bson = "0.14.0"
base64 = "0.12.0"
[dependencies.redis]
version = "*"